--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "bootstrap": "^5.2.3",
     "bootstrap-vue-3": "^0.5.1",
     "core-js": "^3.8.3",
+    "jquery": "^3.6.3",
+    "magnific-popup": "^1.1.0",
     "vue": "^3.2.13",
     "vue3-carousel": "^0.2.9"
   },
